--- a/src/test/resources/src/assets/locales/ko.json
+++ b/src/test/resources/src/assets/locales/ko.json
@@ -44,7 +44,11 @@
         },
         "foos" : {
             "title" : "Foos"
+        },
+        "bars" : {
+            "title" : "Bars"
         }
+
     },
 
 
